# tred

./: .gitignore  LICENSE  README.txt  pypi.md  pyproject.toml  requirements.txt
docs/: index.html  search.js  tred.html
docs/tred/: datasets.html
examples/: basic.ipynb
tdim/: __init__.py  _base.py  _m_transforms.py  _tensor_pca.py  _utils.py  all.py  devel.py
tests/: test_m_transforms.py  test_tensor_ops.py  test_tensor_pca.py  test_tpca.py  test_utils.py
tred/: __init__.py  _base.py  _m_transforms.py  _ops.py  _tensor_ops.py  _tensor_pca.py  _utils.py
